<resources>
    <string name="app_name">PDA</string>
    <string name="ERROR1">objectCreateError</string>
    <string name="ERROR2">mediaPlayError</string>
    <string name="title">个人数字助手</string>
    <string name="enterButtonText">Link Start!</string>
    <string name="bgDescription">backgroundImage</string>
    <string name="button_more">button_more</string>
    <string name="default_text">欢迎使用个人数字助手，我叫bot</string>
    <string name="introInfo">←更多功能点这里</string>
    <string name="send">发送</string>
    <string name="default_sendmessage">开始和bot聊天吧!</string>
    <string name="tallybook_title">记 \ \ \ \ \ \ \ 账 \ \ \ \ \ \ \ 本</string>
    <string name="agenda_title">日 \ \ \ \ \ \ \ 程 \ \ \ \ \ \ \ 表</string>
    <string name="back">back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nian">年</string>
    <string name="yue">月</string>
    <string name="ri">日</string>
    <string name="delete">删除</string>
    <string name="add">添加</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="pda">\ \ \ \ \ \ \ 关\ \ \ \ \ \ \ 于</string>
    <string name="settings">\ \ \ \ \ \ \ 设\ \ \ \ \ \ \ \ 置</string>
    <string name="about_content">
        PDA，个人数字助理，旨在为用户提供日常生活中的便捷服务。
        期初其实是为了能够实现一个能够和二次元老婆互动的软件。主要还是想实现和月下老婆的语音互动。
    </string>
</resources>