<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--标题栏-->
    <LinearLayout
        android:id="@+id/titleBarAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue">
        <ImageView
            android:id="@+id/backButtonFromAbout"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:src="@drawable/back_white"
            android:contentDescription="@string/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pda"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            android:gravity="center"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/littleGrey"
                android:text="关于PDA"
                android:textSize="15sp"
                android:layout_gravity="start"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_content"
                android:textSize="15sp"
                android:layout_gravity="start"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/littleGrey"
                android:text="开发者"
                android:textSize="15sp"
                android:layout_gravity="start"
                android:padding="10dp"/>

            <!--开发者信息-->
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:rowCount="4"
                android:columnCount="4">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_rowSpan="2"
                    android:layout_columnSpan="2"
                    android:src="@drawable/ausertalias"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:text="Ausert"
                    android:textSize="20sp"
                    android:layout_gravity="start"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:text="Main Developer"
                    android:textSize="12sp"
                    android:padding="10dp"/>
            </GridLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/littleGrey"
                android:padding="10dp"
                android:textSize="15sp"
                android:text="项目开源链接"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:padding="10dp"
                android:text="github: https://github.com/AusertDream/Personal-Digital-Assistant"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>